Normalize coordinates (int into long, float into double)